# bookstore

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini  pytest_config_link.txt  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/migrations/: 0001_initial.py
order/tests/: test_order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py
product/tests/: test_category_serializer.py  test_product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
